[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/death/Death.gd" type="Script" id=1]
[ext_resource path="res://title_screen/system failure.png" type="Texture" id=2]
[ext_resource path="res://title_screen/Fonts/vt323_35.tres" type="DynamicFont" id=3]
[ext_resource path="res://title_screen/Fonts/miltown2_30.tres" type="DynamicFont" id=4]
[ext_resource path="res://samples/musicas/TELA MORTE.wav" type="AudioStream" id=5]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1040.0
margin_bottom = 140.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="Decisions" type="VBoxContainer" parent="Menu"]
margin_top = 144.0
margin_right = 1040.0
margin_bottom = 560.0
size_flags_vertical = 3

[node name="Timer" type="Timer" parent="Menu/Decisions"]
wait_time = 0.05
autostart = true

[node name="cause" type="RichTextLabel" parent="Menu/Decisions"]
margin_right = 1040.0
margin_bottom = 40.0
rect_min_size = Vector2( 1040, 40 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 1, 0.243137, 1 )
bbcode_enabled = true

[node name="kill" type="RichTextLabel" parent="Menu/Decisions"]
margin_top = 44.0
margin_right = 1040.0
margin_bottom = 84.0
rect_min_size = Vector2( 1040, 40 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 1, 0.243137, 1 )
bbcode_enabled = true

[node name="exist_time" type="RichTextLabel" parent="Menu/Decisions"]
margin_top = 88.0
margin_right = 1040.0
margin_bottom = 128.0
rect_min_size = Vector2( 1040, 40 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 1, 0.243137, 1 )
bbcode_enabled = true

[node name="shoots" type="RichTextLabel" parent="Menu/Decisions"]
margin_top = 132.0
margin_right = 1040.0
margin_bottom = 172.0
rect_min_size = Vector2( 1040, 40 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 1, 0.243137, 1 )
bbcode_enabled = true

[node name="dashs" type="RichTextLabel" parent="Menu/Decisions"]
margin_top = 176.0
margin_right = 1040.0
margin_bottom = 216.0
rect_min_size = Vector2( 1040, 40 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 1, 0.243137, 1 )
bbcode_enabled = true

[node name="version" type="RichTextLabel" parent="Menu/Decisions"]
margin_top = 220.0
margin_right = 1040.0
margin_bottom = 260.0
rect_min_size = Vector2( 1040, 40 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 1, 0.243137, 1 )
bbcode_enabled = true

[node name="Buttons" type="HBoxContainer" parent="Menu/Decisions"]
margin_top = 264.0
margin_right = 1040.0
margin_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Continue" type="Button" parent="Menu/Decisions/Buttons"]
margin_right = 518.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
flat = true

[node name="upgrade" type="Label" parent="Menu/Decisions/Buttons/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
text = "

            Upgrade"

[node name="Exit" type="Button" parent="Menu/Decisions/Buttons"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/focus = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
flat = true

[node name="exit" type="Label" parent="Menu/Decisions/Buttons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.521569, 0.0980392, 1 )
text = "

               Exit"

[node name="MusicaMorte" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true

[node name="ColorRect" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="timeout" from="Menu/Decisions/Timer" to="." method="_on_Timer_timeout"]
[connection signal="ready" from="Menu/Decisions/cause" to="." method="_on_cause_ready"]
[connection signal="ready" from="Menu/Decisions/kill" to="." method="_on_cause_ready"]
[connection signal="ready" from="Menu/Decisions/exist_time" to="." method="_on_exist_time_ready"]
[connection signal="ready" from="Menu/Decisions/shoots" to="." method="_on_shoots_ready"]
[connection signal="ready" from="Menu/Decisions/dashs" to="." method="_on_dashs_ready"]
[connection signal="ready" from="Menu/Decisions/version" to="." method="_on_version_ready"]
[connection signal="focus_entered" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_focus_exited"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_mouse_exited"]
[connection signal="pressed" from="Menu/Decisions/Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Menu/Decisions/Buttons/Continue" to="Menu/Decisions/Buttons/Continue" method="_on_Continue_pressed"]
[connection signal="focus_entered" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_focus_exited"]
[connection signal="gui_input" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_gui_input"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Continue/upgrade" to="." method="_on_upgrade_mouse_exited"]
[connection signal="focus_entered" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_focus_exited"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_mouse_exited"]
[connection signal="pressed" from="Menu/Decisions/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Menu/Decisions/Buttons/Exit" to="Menu/Decisions/Buttons/Exit" method="_on_Exit_pressed"]
[connection signal="focus_entered" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_focus_entered"]
[connection signal="focus_exited" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_focus_exited"]
[connection signal="gui_input" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_gui_input"]
[connection signal="mouse_entered" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_mouse_entered"]
[connection signal="mouse_exited" from="Menu/Decisions/Buttons/Exit/exit" to="." method="_on_exit_mouse_exited"]
